--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.15.11",
     "@types/node-cron": "^3.0.7",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4", 
+    "typedoc": "^0.23.28"
   }
 }
