--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "sass": "^1.93.2",
-    "tiptap": "^1.32.2"
+    "tiptap": "^1.32.2",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
