--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,10 @@
     "@types/node-cron": "^3.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4", 
-    "typedoc": "^0.23.28"
+    "typedoc": "^0.23.28",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   }
 }
