--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@tiptap/extension-image": "^3.6.2",
     "@tiptap/react": "^3.6.1",
     "@tiptap/starter-kit": "^3.6.1",
     "axios": "^1.12.2",
@@ -21,8 +22,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "sass": "^1.93.2",
-    "tiptap": "^1.32.2",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "tiptap": "^1.32.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
